# PPTPDFComparator

./: .gitignore  A.pptx  A_1000.pptx  B.pptx  B_1000.pptx  CLAUDE.md  PLAN_comparison_speedup.md  build_all.py  build_nuitka_pyside.py  build_nuitka_wx.py  build_pyside.py  build_pyside.spec  build_wx.py  build_wx.spec  create_test_files.py  pyproject.toml
.claude/cache/agents/scout/: latest-output.md
src/: __init__.py  main.py  main_pyside.py  main_wx.py
src/core/: __init__.py  document.py  exclusion_zone.py  export.py  image_comparator.py  page_matcher.py  session.py
src/gui_pyside/: __init__.py  main_window.py
src/gui_wx/: __init__.py  main_window.py
src/utils/: __init__.py  image_utils.py
tests/: __init__.py
